# cpuid-cpp

./: .clangformat  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cpuid_exe  static-operator.cpp  test_cpuid
.qt/: QtDeploySupport.cmake
src/: cpuid.hpp  hybrid.cpp  hybrid.hpp  intel_family.hpp  main.cpp  utils.cpp  utils.hpp
